build.gradle: upgrade jME to v3.7.0-stable